Basic infrastructure for RGB mode